[tool.poetry]
name = "baskerville"
version = "0.1.0"
description = "baskerville"
authors = ["Calico f(DNA) <drk@calicolabs.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
h5py = ">=3.10.0"
intervaltree = ">=3.1.0"
joblib = ">=1.1.1"
matplotlib = ">=3.7.1"
google-cloud-storage = ">=2.0.0"
natsort = ">=7.1.1"
networkx = ">=2.8.4"
numpy = ">=1.24.3"
pandas = ">=1.5.3"
pybigwig = ">=0.3.18"
pybedtools = ">=0.3.0"
pysam = ">=0.22.0"
qnorm = ">=0.8.1"
seaborn = ">=0.12.2"
scikit-learn = ">=1.2.2"
scipy = ">=1.9.1"
statsmodels = ">=0.13.5"
tabulate = ">=0.8.10"
tensorflow = ">=2.15.0"
tqdm = ">=4.65.0"
pyfaidx = ">=0.7.1"
keras = ">=2.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
ruff = "^0.1.11"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
tensorrt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
